--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^6.4.8",
+    "@mui/styled-engine-sc": "^6.4.6",
+    "@mui/x-charts": "^7.28.0",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.3",
+    "chart.js": "^4.4.8",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "styled-components": "^6.1.16",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
