--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "styled-components": "^6.1.16",
     "tailwindcss": "^4.0.14"
